[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = 'rocm-docs-core'
version = "0.11.1"
authors=[
  {name="Lauren Wrubleski", email="Lauren.Wrubleski@amd.com"}
]
description ='Core utilities for all ROCm documentation on RTD'
readme="README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "GitPython>=3.1.30",
  'importlib_resources>=5.10.2;python_version<"3.9"',
  "PyGithub>=1.58.1",
  "sphinx>=5.3.0",
  "breathe>=4.34.0",
  "myst-parser[linkify]>=1.0.0",
  "pydata-sphinx-theme>=0.13.3",
  "sphinx-book-theme>=1.0.1",
  "sphinx-copybutton>=0.5.1",
  "sphinx-design>=0.3.0",
  "sphinx_external_toc>=0.3.1",
  "sphinx-notfound-page>=0.8.3",
  "pyyaml>=6.0",
  "fastjsonschema>=2.16"
]
requires-python = ">=3.8"

[project.urls]
repository="https://github.com/RadeonOpenCompute/rocm-docs-core"
documentation="https://docs.amd.com"

[project.optional-dependencies]
api_reference = [
  "doxysphinx>=3.2.1,!=3.3.0,!=3.3.1"
]
development = [
  "commitizen>=2.42"
]

[project.entry-points."sphinx.html_themes"]
rocm_docs_theme = "rocm_docs.theme"

[tool.setuptools.packages.find]
where=["src"]

[tool.setuptools.package-data]
rocm_docs = ["data/**/*", "rocm_docs_theme/**/*"]

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.11.1"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
annotated_tag = true
major_version_zero = true
