[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = 'rocm-docs-core'
version = "0.20.0"
authors=[
  {name="Lauren Wrubleski", email="Lauren.Wrubleski@amd.com"}
]
description ='Core utilities for all ROCm documentation on RTD'
readme="README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
dependencies = [
  "GitPython>=3.1.30",
  'importlib_resources>=5.10.2;python_version<"3.9"',
  "PyGithub>=1.58.1",
  "sphinx>=5.3.0",
  "breathe>=4.34.0",
  "myst-parser>=1.0.0",
  "pydata-sphinx-theme>=0.13.3",
  "sphinx-book-theme>=1.0.1",
  "sphinx-copybutton>=0.5.1",
  "sphinx-design>=0.3.0",
  "sphinx_external_toc>=0.3.1",
  "sphinx-notfound-page>=0.8.3",
  "pyyaml>=6.0",
  "fastjsonschema>=2.16"
]
requires-python = ">=3.8"

[project.urls]
repository="https://github.com/RadeonOpenCompute/rocm-docs-core"
documentation="https://docs.amd.com"

[project.optional-dependencies]
api_reference = [
  "doxysphinx>=3.3.2"
]
development = [
  "black>=22.1",
  "build>=0.10.0",
  "commitizen>=2.42",
  "isort>=5.12.0",
  "mypy>=1.3.0",
  "pip-tools>=6.13.0",
  "pre-commit>=3.3.2",
  "ruff>=0.0.269",
]

[project.entry-points."sphinx.html_themes"]
rocm_docs_theme = "rocm_docs.theme"

[tool.setuptools.packages.find]
where=["src"]

[tool.setuptools.package-data]
rocm_docs = ["data/**/*", "rocm_docs_theme/**/*"]

[tool.black]
target-version = ["py38"]
line-length = 80
color = true

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.20.0"
version_files = ["pyproject.toml:^version"]
tag_format = "v$version"
annotated_tag = true
major_version_zero = true

[tool.isort]
# https://github.com/timothycrosley/isort/
py_version = 38
line_length = 100

known_typing = ["typing", "types", "typing_extensions", "mypy", "mypy_extensions"]
sections = ["FUTURE", "TYPING", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
include_trailing_comma = true
profile = "black"
multi_line_output = 3
indent = 4
color_output = true

[tool.mypy]
allow_redefinition = false
check_untyped_defs = true
color_output = true
disallow_any_generics = true
disallow_incomplete_defs = true
implicit_reexport = false
pretty = true
python_version = 3.8
show_column_numbers = true
show_error_codes = true
show_error_context = true
show_traceback = true
strict_equality = true
strict_optional = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
select = ["ARG", "F", "E", "W", "N", "D", "UP", "RET"]
ignore = ["E501", "D203", "D213", "D4"]
target-version = "py38"
line-length = 80
