[metadata]
name = rocm_docs
version = 0.0.1
author = Lauren Wrubleski
author_email = Lauren.Wrubleski@amd.com
description = A package with the default setup for ROCm documentation in RTD.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://amd.com
project_urls =
    Docs = https://docs.amd.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    GitPython>=3.1.30,<3.2
    importlib_resources>=5.10.2,<5.11

[options.packages.find]
where = src

[options.package_data]
rocm_docs = data/**/*
